# actuarial-data-science

./: .gitignore  ACTUARIAL_INVENTORY_SUMMARY.md  ADMIN_REQUEST.md  Actuarial-Inventory.ipynb  DOCUMENTATION_INDEX.md  Exec_KPI.ipynb  Executive_Metadata_Gap_Analysis.ipynb  QUICK_START.md  README.md  Untitled.ipynb  actuarial-inventory2-clean.html  actuarial-inventory2-presentation.html  actuarial-inventory2-slides.html  actuarial-inventory2.html  actuarial-inventory2.ipynb  actuarial_impact_analysis.ipynb  bash-setup.md  configuration.md  data-science.code-workspace  flowchart TB.mmd  pyproject.toml
.ipynb_checkpoints/: actuarial-inventory2-checkpoint.ipynb
actuarial-inventory/: ACTUARIAL_INVENTORY_SUMMARY.md  Actuarial_Inventory_Overview_Slide1.ipynb_generated.pptx  Exec_KPI.ipynb  actuarial-inventory2-clean.html  actuarial-inventory2-presentation.html  actuarial-inventory2-slides.html  actuarial-inventory2.html  actuarial-inventory2.ipynb  actuarial_impact_analysis.ipynb
actuarial-inventory/context-engineering/: acturarial-mlops-mermaid  chatlogs.txt  inventory-report.txt  risk-actuarial-reservations-current-state
actuarial-inventory/presentation-planning/: initial-strategy-pilot
bootstrap-scaffold/: data-science-bootstrap.ps1
context-engineering/: acturarial-mlops-mermaid  chatlogs.txt  inventory-report.txt  risk-actuarial-reservations-current-state
docs/: DOCUMENTATION_INDEX.md  QUICK_START.md  SETUP.md  START_HERE.md  bash-setup.md  configuration.md
notebooks/: ingestion-impact-plan.ipynb  readme-plan.md
presentation-planning/: initial-strategy-pilot
(+9 files in other folders)
