
[tool.poetry]
package-mode = false
name = "data-science"
version = "0.1.0"
description = "Poetry-based data science environment"
authors = ["Brian Brewer <bbrewer1@example.com>"]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
numpy = "*"
pandas = "*"
matplotlib = "*"
seaborn = "*"
scikit-learn = "*"
jupyterlab = "*"
ipykernel = "*"
python-pptx = "^1.0.2"

[tool.poetry.group.dev.dependencies]
# optional dev tools can go here later, e.g.: black = "*", ruff = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

